apps/base/dev-minio/deploy/console-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-console
  labels:
    app.kubernetes.io/name: minio
    app.kubernetes.io/component: minio
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 9001
      protocol: TCP
      targetPort: 9001
  selector:
    app.kubernetes.io/name: minio
    app.kubernetes.io/component: minio
